--- a/foundations/01-css-methods/index.html
+++ b/foundations/01-css-methods/index.html
@@ -4,11 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!--Link to extrenal CSS file, with href location to file relative
+    to this html file and rel specifying the relationship
+    between this html file and the linked file-->
+    <link rel="stylesheet" href="styles.css">
+
+      <!--Internal CSS specification-->
+      <style>
+        p {
+          background-color: green;
+          color: white;
+          font-size: 18px;
+        }
+      </style>
+
     <title>Methods for Adding CSS</title>
   </head>
   <body>
     <div>Style me via the external method!</div>
     <p>I would like to be styled with the internal method, please.</p>
-    <button>Inline Method</button>
+
+    <!--Inline CSS specification-->
+    <button style="background-color: orange; font-size: 18px">Inline Method</button>
   </body>
 </html>
