--- a/foundations/02-class-id-selectors/index.html
+++ b/foundations/02-class-id-selectors/index.html
@@ -8,10 +8,13 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <p>Number 1 - I'm a class!</p>
-    <div>Number 2 - I'm one ID.</div>
-    <p>Number 3 - I'm a class, but cooler!</p>
-    <div>Number 4 - I'm another ID.</div>
-    <p>Number 5 - I'm a class!</p>
+    <p class="p-class">Number 1 - I'm a class!</p>
+    <div id="div-id">Number 2 - I'm one ID.</div>
+
+    <!--This p element is associated with 2 classes-->
+    <p class="p-class cool-class">Number 3 - I'm a class, but cooler!</p>
+
+    <div id="div-id-another">Number 4 - I'm another ID.</div>
+    <p class="p-class">Number 5 - I'm a class!</p>
   </body>
 </html>
