--- a/flex/03-flex-header-2/index.html
+++ b/flex/03-flex-header-2/index.html
@@ -17,10 +17,13 @@
         <li><a href="google.com">link-two</a></li>
         <li><a href="google.com">link-three</a></li>
       </ul>
-      <button class="notifications">
-        1 new notification
-      </button>
-      <div class="profile-image"></div>
+      <!--Added div w/ profile class to separate right part of header-->
+      <div class="profile">
+        <button class="notifications">
+          1 new notification
+        </button>
+        <div class="profile-image"></div>
+    </div>
     </div>
   </body>
 </html>
